test/src/e2e_vm_tests/test_programs/should_fail/submodule_visibility/src/other/lib.sw
library;

pub struct S {
    pub val: u64,
}

pub struct T {
    pub val: u64,
}
